script/cloudformation/api.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Network resource
Resources:
  # VPC 설정
  APIVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: APIVpc

  # subnet 설정
  ## public 1a.1c private 1a,1c
  APISubnetPrivate1A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.8.0/24
      VpcId:
        Ref: APIVpc
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: API-subnet-private-1a
        - Key: Type
          Value: Isolated
  APISubnetPrivate1C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.9.0/24
      VpcId:
        Ref: APIVpc
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: API-subnet-private-1c
        - Key: Type
          Value: Isolated

  # 퍼블릭 액세스를 위해 서브넷 구성 업데이트
  APISubnetPublic1A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.0.0/24
      VpcId: !Ref APIVpc
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: API-subnet-public-1a
        - Key: Type
          Value: Public

  APISubnetPublic1C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.1.0/24
      VpcId: !Ref APIVpc
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: API-subnet-public-1c
        - Key: Type
          Value: Public

  # 네트워크 acl
  APISubnetPublic1ANetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref APISubnetPublic1A
      NetworkAclId: !Ref APISubnetPublicNetworkAcl

  APISubnetPublic1CNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref APISubnetPublic1C
      NetworkAclId: !Ref APISubnetPublicNetworkAcl

  APISubnetPublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref APIVpc
      Tags:
        - Key: Name
          Value: API-subnet-public-network-acl

  # 네트워크 ACL의 인바운드와 아웃바운드 트래픽을 모두 허용
  APISubnetPublicNetworkAclInboundRuleAll:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref APISubnetPublicNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0

  APISubnetPublicNetworkAclOutboundRuleAll:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref APISubnetPublicNetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  # 인터넷 게이트웨이 생성
  APIIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: API-igw

  APIVpcgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: APIVpc
      InternetGatewayId:
        Ref: APIIgw

  APIVpcgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: APIVpc
      InternetGatewayId:
        Ref: APIIgw

  #NAT 게이트웨이 생성
  APINatGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain : vpc

  APINatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationID: !GetAtt APINatGatewayEIP.AllocationId
      SubnetId: !Ref APISubnetPublic1A

  # 라우팅 테이블
  ## public routing table, private routing table
  APIPublicrtb:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Ref: APIVpc
      Tags:
        - Key: Name
          Value: API-public-rtb

  APIPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: APIVpcgwAttachment
    Properties:
      RouteTableId:
        Ref: APIPublicrtb
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: 
        Ref: APIIgw

  APISubnetPublic1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: APIPublicrtb
      SubnetId:
        Ref: APISubnetPublic1A
  APISubnetPublic1CRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: APIPublicrtb
      SubnetId:
        Ref: APISubnetPublic1C

  APIPrivatertb:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: 
        Ref: APIVpc
      Tags:
        - Key: Name
          Value: API-private-rtb
  
  APIPrivatertbRoute:
    Type: AWS::EC2::Route
    DependsOn: APIVpcgwAttachment
    Properties:
      RouteTableId: !Ref APIPrivatertb
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref APINatGateway
 
  APISubnetPrivate1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref APISubnetPrivate1A
      RouteTableId: !Ref APIPrivatertb

  APISubnetPrivate1CRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref APISubnetPrivate1C
      RouteTableId: !Ref APIPrivatertb

  # 보안 그룹
  ## was sg, load balancer sg
  APIWASSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: WAS Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic 
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:8080
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
      Tags:
        - Key: Name
          Value: API-WAS-sg
      VpcId:
        Ref: APIVpc
  
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: LoadBalancer Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic 
          IpProtocol: "-1"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: API-lb-sg
      VpcId:
        Ref: APIVpc
  
  #대상그룹
  APITargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: API-tg
      Protocol: HTTP
      Port: 8080
      TargetType: ip
      VpcId: APIVpc

  #로드 밸런서
  APILoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: API-LoadBalancer
      Subnets:
        - API-subnet-private-1a
        - API-subnet-private-1c
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Type: application
      Tags:
        - Key: Name
          Value: API-LoadBalancer

  # 로드 밸런서에 대상 그룹 연결
  APILoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref APILoadBalancer
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref APITargetGroup

##############################################################
  #ecr 생성
  BackendECRRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: backend
  
  #ecs cluster 생성
  APICluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: API-cluster
